# robotic_tactoe

./: README.md  compare1
computer_vision/: board_processing.py  board_recognition.ipynb  symbols_recognition.ipynb
image_processing/: package.xml  setup.py
image_processing/image_processing/: compute_best_move.py  get_board_state copy.py  get_board_state.py
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: firefighter.srdf  joint_limits.yaml
moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit_config_real/: .setup_assistant  package.xml
moveit_config_real/config/: joint_limits.yaml  moveit_controllers.yaml  mycobot_280.srdf  mycobot_280.urdf.xacro
moveit_config_real/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  moveit_rviz_test.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit_planning/: CMakeLists.txt  package.xml
moveit_planning/config/: real_config.txt  sim_config.txt
moveit_planning/launch/: draw_o.launch.py  draw_x.launch.py  main_real.launch.py  main_sim.launch.py  move_group_service.launch.py  move_group_service_real.launch.py  move_group_service_sim.launch.py  moveit.launch.py  moveit_service_test.launch.py  test_joint.launch.py  test_trajectory.launch.py  web_interface.launch.py
moveit_planning/models/circle/: model.config  model.sdf
moveit_planning/models/circle/meshes/: circle.dae
moveit_planning/models/cross/: model.config  model.sdf
moveit_planning/models/cross/meshes/: cross.dae
moveit_planning/models/grid/: model.config  model.sdf
moveit_planning/models/grid/meshes/: grid.dae
moveit_planning/src/: draw_o.cpp  draw_x.cpp  move_group_service.cpp  test_joint.cpp  test_trajectory.cpp  tic_tac_toe copy.cpp  tic_tac_toe.cpp
moveit_planning/srv/: GetBoardState.srv  MakeMove.srv  MoveToCoordinates.srv
reinforcement_learning/: training.ipynb
websites/black-dashboard-master/assets/css/: black-dashboard.css  nucleo-icons.css
websites/black-dashboard-master/html/: about.html  index.html  main.js  typography.html
websites/tests/: index.html  main.js
websites/tictactoe/: app.js  index.html
